# Astra

./: .gitignore  Cargo.toml  README.md  idea.md  main.py  roadmap.md
notes/: net_library.md  neural_net_errors.md  tensor_methods.md  todo.md
src/: borken_net.rs  broken_net2.rs  broken_net3.rs  error.rs  helper_traits.rs  main.rs  net.rs
src/astra_net/: activation.rs  conv2d.rs  conv2d2.rs  conv2d3.rs  dense.rs  flatten.rs  layer.rs  layer_bp.rs  loss.rs  mod.rs  net_error.rs  optimizer.rs
src/engine/: flycam.rs  nbody.rs
src/mutating/: net.rs
src/tensor/: mod.rs  tensor_error.rs
src/tensor2/: mod.rs
