[package]
name = "Astral_Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9.1", features = ["dynamic"]}
argh = "0.1"
bigbang = "0.0.9"
rand = "0.8.5"
nalgebra = { version = "0.31.1", features = ["rand", "serde-serialize"] }
rand_distr = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
